--- a/templates/containers.html
+++ b/templates/containers.html
@@ -1,23 +1,23 @@
-{% extends "admin/base.html" %}
+{% extends "base.html" %}
 
 {% block content %}
 <div class="modal fade" id="create-container-modal" tabindex="-1" role="dialog" aria-labelledby="container-modal-label">
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+				<button type="button" class="close ml-1" data-dismiss="modal" aria-label="Close"><span
 						aria-hidden="true">&times;</span></button>
-				<h4 class="modal-title" id="container-modal-label">Create Container</h4>
+				<h4 class="modal-title mx-auto" id="container-modal-label">Create Container</h4>
 			</div>
-			<form method="POST" action="{{ request.script_root }}/admin/containers/new" enctype="multipart/form-data">
+			<form method="POST" action="{{ request.script_root }}/containers/new" enctype="multipart/form-data">
 				<div class="modal-body">
 						<div class="form-group">
 							<label for="name">Name</label>
-							<input type="text" class="form-control" name="name" placeholder="Enter container name">
+							<input required type="text" class="form-control" name="name" placeholder="Enter container name">
 						</div>
 						<div class="form-group">
 							<label for="buildfile-editor" class="control-label">Build File</label>
-							<textarea id="buildfile-editor" class="form-control" name="buildfile" rows="10" placeholder="Enter container build file"></textarea>
+							<textarea required id="buildfile-editor" class="form-control" name="buildfile" rows="10" placeholder="Enter container build file"></textarea>
 						</div>
 						<div class="form-group">
 							<label for="container-files">Associated Files
@@ -40,15 +40,15 @@
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+				<button type="button" class="close ml-1" data-dismiss="modal" aria-label="Close"><span
 						aria-hidden="true">&times;</span></button>
-				<h4 class="modal-title" id="container-modal-label">Import Image</h4>
+				<h4 class="modal-title mx-auto" id="container-modal-label">Import Image</h4>
 			</div>
-			<form method="POST" action="{{ request.script_root }}/admin/containers/import" enctype="multipart/form-data">
+			<form method="POST" action="{{ request.script_root }}/containers/import" enctype="multipart/form-data">
 				<div class="modal-body">
 						<div class="form-group">
 							<label for="name">Name</label>
-							<input type="text" class="form-control" name="name" placeholder="Enter image name">
+							<input required type="text" class="form-control" name="name" placeholder="Enter image name">
 						</div>
 						<input type="hidden" value="{{ nonce }}" name="nonce" id="nonce">
 				</div>
@@ -86,7 +86,7 @@
 </div>
 
 
-<div class="row">
+<div class="row m-3">
 	<br>
 	<div style="text-align:center">
 		<h1>Containers</h1>
@@ -99,31 +99,31 @@
 	</div>
 	<br>
 {% if containers %}
-	<table id="teamsboard">
-		<thead>
+	<table id="teamsboard" class="table table-striped table-dark mt-4">
+		<thead class="thead-dark">
 			<tr>
-				<td class="text-center"><strong>Status</strong>
+				<td class="text-center pr-2"><strong>Status</strong>
 				</td>
-				<td class="text-center"><strong>Name</strong>
+				<td class="text-center pr-2"><strong>Name</strong>
 				</td>
-				<td class="text-center"><strong>Ports</strong>
+				<td class="text-center pr-2"><strong>Ports</strong>
 				</td>
-				<td class="text-center"><strong>Settings</strong>
+				<td class="text-center pr-2"><strong>Settings</strong>
 				</td>
 			</tr>
 		</thead>
 		<tbody>
 		{% for c in containers %}
 			<tr>
-				<td class="text-center">{{ c.status }}</td>
-				<td class="text-center container_item" id="{{ c.id }}">{{ c.name }}</td>
-				<td class="text-center">{{ c.ports }}</td>
-				<td class="text-center">
+				<td class="p-3 text-center">{{ c.status }}</td>
+				<td class="p-3 text-center container_item" id="{{ c.id }}">{{ c.name }}</td>
+				<td class="p-3 text-center">{{ c.ports }}</td>
+				<td class="p-3 text-center">
 					<span>
 						{% if c.status != 'running' %}
-						<i class="fa fa-play"></i>
+						<i class="fa fa-play pr-2"></i>
 						{% else %}
-						<i class="fa fa-stop"></i>
+						<i class="fa fa-stop pr-2"></i>
 						{% endif %}
 						<i class="fa fa-times"></i>
 					</span>
@@ -137,6 +137,7 @@
 {% endblock %}
 
 {% block scripts %}
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script>
 
 function load_confirm_modal(title, url, container_name){
@@ -165,21 +166,21 @@ $('.fa-times').click(function(){
 	var elem = $(this).parent().parent().parent().find('.container_item');
 	var container = elem.attr('id');
 	var container_name = elem.text().trim();
-	load_confirm_modal('Delete', '/admin/containers/'+container+'/delete', container_name)
+	load_confirm_modal('Delete', '/containers/'+container+'/delete', container_name)
 });
 
 $('.fa-play').click(function(){
 	var elem = $(this).parent().parent().parent().find('.container_item');
 	var container = elem.attr('id');
 	var container_name = elem.text().trim();
-	load_confirm_modal('Start', '/admin/containers/'+container+'/start', container_name)
+	load_confirm_modal('Start', '/containers/'+container+'/start', container_name)
 });
 
 $('.fa-stop').click(function(){
 	var elem = $(this).parent().parent().parent().find('.container_item');
 	var container = elem.attr('id');
 	var container_name = elem.text().trim();
-	load_confirm_modal('Stop', '/admin/containers/'+container+'/stop', container_name)
+	load_confirm_modal('Stop', '/containers/'+container+'/stop', container_name)
 });
 
 $(document).ready(function(){
