--- a/templates/containers.html
+++ b/templates/containers.html
@@ -11,22 +11,24 @@
 			</div>
 			<form method="POST" action="{{ request.script_root }}/containers/new" enctype="multipart/form-data">
 				<div class="modal-body">
-						<div class="form-group">
-							<label for="name">Name</label>
-							<input required type="text" class="form-control" name="name" placeholder="Enter container name">
-						</div>
-						<div class="form-group">
-							<label for="buildfile-editor" class="control-label">Build File</label>
-							<textarea required id="buildfile-editor" class="form-control" name="buildfile" rows="10" placeholder="Enter container build file"></textarea>
-						</div>
-						<div class="form-group">
-							<label for="container-files">Associated Files
-								<i class="fa fa-question-circle gray-text" data-toggle="tooltip" data-placement="right" title="These files are uploaded alongside your buildfile"></i>
-							</label>
-							<input type="file" name="files[]" id="container-files" multiple>
-							<sub class="help-block">Attach multiple files using Control+Click or Cmd+Click.</sub>
-						</div>
-						<input type="hidden" value="{{ nonce }}" name="nonce" id="nonce">
+					<div class="form-group">
+						<label for="name">Name</label>
+						<input required type="text" class="form-control" name="name" placeholder="Enter container name">
+					</div>
+					<div class="form-group">
+						<label for="buildfile-editor" class="control-label">Build File</label>
+						<textarea required id="buildfile-editor" class="form-control" name="buildfile" rows="10"
+							placeholder="Enter container build file"></textarea>
+					</div>
+					<div class="form-group">
+						<label for="container-files">Associated Files
+							<i class="fa fa-question-circle gray-text" data-toggle="tooltip" data-placement="right"
+								title="These files are uploaded alongside your buildfile"></i>
+						</label>
+						<input type="file" name="files[]" id="container-files" multiple>
+						<sub class="help-block">Attach multiple files using Control+Click or Cmd+Click.</sub>
+					</div>
+					<input type="hidden" value="{{ nonce }}" name="nonce" id="nonce">
 				</div>
 				<div class="modal-footer">
 					<button type="submit" class="btn btn-primary">Create</button>
@@ -46,11 +48,11 @@
 			</div>
 			<form method="POST" action="{{ request.script_root }}/containers/import" enctype="multipart/form-data">
 				<div class="modal-body">
-						<div class="form-group">
-							<label for="name">Name</label>
-							<input required type="text" class="form-control" name="name" placeholder="Enter image name">
-						</div>
-						<input type="hidden" value="{{ nonce }}" name="nonce" id="nonce">
+					<div class="form-group">
+						<label for="name">Name</label>
+						<input required type="text" class="form-control" name="name" placeholder="Enter image name">
+					</div>
+					<input type="hidden" value="{{ nonce }}" name="nonce" id="nonce">
 				</div>
 				<div class="modal-footer">
 					<button type="submit" class="btn btn-primary">Create</button>
@@ -73,9 +75,12 @@
 						<form method="POST">
 							<input id="nonce" type="hidden" name="nonce" value="{{ nonce }}">
 							<div class="small-6 small-centered text-center columns">
-								<p>Are you sure you want to <span id="confirm-container-method"></span> <strong id="confirm-container-name"></strong>?</p>
-								<button type="button" data-dismiss="modal" class="btn btn-theme btn-outlined">No</button>
-								<button type="button" id="confirm-container" class="btn btn-theme btn-outlined">Yes</button>
+								<p>Are you sure you want to <span id="confirm-container-method"></span> <strong
+										id="confirm-container-name"></strong>?</p>
+								<button type="button" data-dismiss="modal"
+									class="btn btn-theme btn-outlined">No</button>
+								<button type="button" id="confirm-container"
+									class="btn btn-theme btn-outlined">Yes</button>
 							</div>
 						</form>
 					</div>
@@ -90,15 +95,17 @@
 	<br>
 	<div style="text-align:center">
 		<h1>Containers</h1>
-		<button class="btn btn-theme btn-outlined create-challenge" data-toggle="modal" data-target="#create-container-modal">
+		<button class="btn btn-theme btn-outlined create-challenge" data-toggle="modal"
+			data-target="#create-container-modal">
 			New Container
 		</button>
-		<button class="btn btn-theme btn-outlined create-challenge" data-toggle="modal" data-target="#import-container-modal">
+		<button class="btn btn-theme btn-outlined create-challenge" data-toggle="modal"
+			data-target="#import-container-modal">
 			Import Image
 		</button>
 	</div>
 	<br>
-{% if containers %}
+	{% if containers %}
 	<table id="teamsboard" class="table table-striped table-dark mt-4">
 		<thead class="thead-dark">
 			<tr>
@@ -113,11 +120,11 @@
 			</tr>
 		</thead>
 		<tbody>
-		{% for c in containers %}
+			{% for c in containers %}
 			<tr>
 				<td class="p-3 text-center">{{ c.status }}</td>
 				<td class="p-3 text-center container_item" id="{{ c.id }}">{{ c.name }}</td>
-				<td class="p-3 text-center">{{ c.ports }}</td>
+				<td class="p-3 text-center">10.9.8.1:{{ c.ports }}</td>
 				<td class="p-3 text-center">
 					<span>
 						{% if c.status != 'running' %}
@@ -129,63 +136,64 @@
 					</span>
 				</td>
 			</tr>
-		{% endfor %}
+			{% endfor %}
 		</tbody>
 	</table>
-{% endif %}
+	{% endif %}
 </div>
 {% endblock %}
 
 {% block scripts %}
-<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+	integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script>
 
-function load_confirm_modal(title, url, container_name){
-	var modal = $('#confirm')
-	modal.find('#confirm-container-name').text(container_name)
-	modal.find('#confirm-container-title').text(title)
-	modal.find('#confirm-container-method').text(title.toLowerCase())
-	$('#confirm form').attr('action', url);
-	$('#confirm').modal('show');
-}
+	function load_confirm_modal(title, url, container_name) {
+		var modal = $('#confirm')
+		modal.find('#confirm-container-name').text(container_name)
+		modal.find('#confirm-container-title').text(title)
+		modal.find('#confirm-container-method').text(title.toLowerCase())
+		$('#confirm form').attr('action', url);
+		$('#confirm').modal('show');
+	}
 
-$('#confirm-container').click(function(e){
-	e.preventDefault();
-	var id = $('#confirm input[name="id"]').val()
-	var user_data = $('#confirm form').serializeArray()
-	$.post($('#confirm form').attr('action'), $('#confirm form').serialize(), function(data){
-		var data = $.parseJSON(JSON.stringify(data))
-		if (data == "1"){
-			location.reload()
-		}
-	})
-});
+	$('#confirm-container').click(function (e) {
+		e.preventDefault();
+		var id = $('#confirm input[name="id"]').val()
+		var user_data = $('#confirm form').serializeArray()
+		$.post($('#confirm form').attr('action'), $('#confirm form').serialize(), function (data) {
+			var data = $.parseJSON(JSON.stringify(data))
+			if (data == "1") {
+				location.reload()
+			}
+		})
+	});
 
 
-$('.fa-times').click(function(){
-	var elem = $(this).parent().parent().parent().find('.container_item');
-	var container = elem.attr('id');
-	var container_name = elem.text().trim();
-	load_confirm_modal('Delete', '/containers/'+container+'/delete', container_name)
-});
+	$('.fa-times').click(function () {
+		var elem = $(this).parent().parent().parent().find('.container_item');
+		var container = elem.attr('id');
+		var container_name = elem.text().trim();
+		load_confirm_modal('Delete', '/containers/' + container + '/delete', container_name)
+	});
 
-$('.fa-play').click(function(){
-	var elem = $(this).parent().parent().parent().find('.container_item');
-	var container = elem.attr('id');
-	var container_name = elem.text().trim();
-	load_confirm_modal('Start', '/containers/'+container+'/start', container_name)
-});
+	$('.fa-play').click(function () {
+		var elem = $(this).parent().parent().parent().find('.container_item');
+		var container = elem.attr('id');
+		var container_name = elem.text().trim();
+		load_confirm_modal('Start', '/containers/' + container + '/start', container_name)
+	});
 
-$('.fa-stop').click(function(){
-	var elem = $(this).parent().parent().parent().find('.container_item');
-	var container = elem.attr('id');
-	var container_name = elem.text().trim();
-	load_confirm_modal('Stop', '/containers/'+container+'/stop', container_name)
-});
+	$('.fa-stop').click(function () {
+		var elem = $(this).parent().parent().parent().find('.container_item');
+		var container = elem.attr('id');
+		var container_name = elem.text().trim();
+		load_confirm_modal('Stop', '/containers/' + container + '/stop', container_name)
+	});
 
-$(document).ready(function(){
-	$('[data-toggle="tooltip"]').tooltip();
-});
+	$(document).ready(function () {
+		$('[data-toggle="tooltip"]').tooltip();
+	});
 
 </script>
 {% endblock %}
