Admin overview WIP

--- a/templates/containers.html
+++ b/templates/containers.html
@@ -91,7 +91,7 @@
 </div>
 
 
-<div class="row m-3">
+<div class="row m-3 justify-content-center">
 	<br>
 	<div style="text-align:center">
 		<h1>Containers</h1>
