--- a/templates/overview.html
+++ b/templates/overview.html
@@ -1,10 +1,129 @@
 {% extends "admin/base.html" %}
 
 {% block content %}
+<div id="confirm" class="modal fade" tabindex="-1">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h2 class="text-center"><span id="confirm-container-title"></span> Container</h2>
+			</div>
+			<div class="modal-body" style="height:110px">
+				<div class="row-fluid">
+					<div class="col-md-12">
+						<form method="POST">
+							<input id="nonce" type="hidden" name="nonce" value="{{ nonce }}">
+							<div class="small-6 small-centered text-center columns">
+								<p>Are you sure you want to <span id="confirm-container-method"></span> <strong
+										id="confirm-container-name"></strong>?</p>
+								<button type="button" data-dismiss="modal"
+									class="btn btn-theme btn-outlined">No</button>
+								<button type="button" id="confirm-container"
+									class="btn btn-theme btn-outlined">Yes</button>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="row m-3 justify-content-center">
+	{% if containers %}
+	<table id="teamsboard" class="table table-striped table-dark mt-4">
+		<thead class="thead-dark">
+			<tr>
+				<td class="text-center pr-2"><strong>Status</strong>
+				</td>
+				<td class="text-center pr-2"><strong>Name</strong>
+				</td>
+				<td class="text-center pr-2"><strong>Ports</strong>
+				</td>
+				<td class="text-center pr-2"><strong>Settings</strong>
+				</td>
+				<td class="text-center pr-2"><strong>Deleted</strong>
+				</td>
+				<td class="text-center pr-2"><strong>Dockerfile</strong>
+				</td>
+			</tr>
+		</thead>
+		<tbody>
+			{% for c in containers %}
+			<tr>
+				<td class="p-3 text-center">{{ c.status }}</td>
+				<td class="p-3 text-center container_item" id="{{ c.id }}">{{ c.name }}</td>
+				<td class="p-3 text-center">10.9.8.1:{{ c.ports }}</td>
+				<td class="p-3 text-center">
+					<span>
+						{% if c.status != 'running' %}
+						<i class="fa fa-play pr-2"></i>
+						{% else %}
+						<i class="fa fa-stop pr-2"></i>
+						{% endif %}
+						<i class="fa fa-times"></i>
+					</span>
+				</td>
+				<td class="p-3 text-center">{{ c.deleted }}</td>
+				<td class="p-3 text-center"><a href="{{c.id}}"><button class="btn btn-light">See
+							file</button></a></td>
+			</tr>
+			{% endfor %}
+		</tbody>
+	</table>
+	{% endif %}
+</div>
 {% endblock %}
 
 {% block scripts %}
-<script type="text/javascript">
-	window.location = script_root + "/admin/containers"
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+	integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script>
+
+	function load_confirm_modal(title, url, container_name) {
+		var modal = $('#confirm')
+		modal.find('#confirm-container-name').text(container_name)
+		modal.find('#confirm-container-title').text(title)
+		modal.find('#confirm-container-method').text(title.toLowerCase())
+		$('#confirm form').attr('action', url);
+		$('#confirm').modal('show');
+	}
+
+	$('#confirm-container').click(function (e) {
+		e.preventDefault();
+		var id = $('#confirm input[name="id"]').val()
+		var user_data = $('#confirm form').serializeArray()
+		$.post($('#confirm form').attr('action'), $('#confirm form').serialize(), function (data) {
+			var data = $.parseJSON(JSON.stringify(data))
+			if (data == "1") {
+				location.reload()
+			}
+		})
+	});
+
+
+	$('.fa-times').click(function () {
+		var elem = $(this).parent().parent().parent().find('.container_item');
+		var container = elem.attr('id');
+		var container_name = elem.text().trim();
+		load_confirm_modal('Delete', '/containers/' + container + '/delete', container_name)
+	});
+
+	$('.fa-play').click(function () {
+		var elem = $(this).parent().parent().parent().find('.container_item');
+		var container = elem.attr('id');
+		var container_name = elem.text().trim();
+		load_confirm_modal('Start', '/containers/' + container + '/start', container_name)
+	});
+
+	$('.fa-stop').click(function () {
+		var elem = $(this).parent().parent().parent().find('.container_item');
+		var container = elem.attr('id');
+		var container_name = elem.text().trim();
+		load_confirm_modal('Stop', '/containers/' + container + '/stop', container_name)
+	});
+
+	$(document).ready(function () {
+		$('[data-toggle="tooltip"]').tooltip();
+	});
+
 </script>
 {% endblock %}
