--- a/templates/containers.html
+++ b/templates/containers.html
@@ -1,5 +1,21 @@
 {% extends "base.html" %}
 
+{% block stylesheets %}
+<style>
+	.active .page-link {
+		background-color: #454d55 !important;
+		color: white !important;
+		border-color: black !important;
+	}
+
+	.page-link {
+		background-color: white !important;
+		color: #454d55 !important;
+		outline: none !important;
+	}
+</style>
+{% endblock %}
+
 {% block content %}
 <div class="modal fade" id="create-container-modal" tabindex="-1" role="dialog" aria-labelledby="container-modal-label">
 	<div class="modal-dialog" role="document">
@@ -93,6 +109,7 @@
 
 <div class="row m-3 justify-content-center">
 	<br>
+	{% if not admin %}
 	<div style="text-align:center">
 		<h1>Containers</h1>
 		<button class="btn btn-theme btn-outlined create-challenge" data-toggle="modal"
@@ -105,6 +122,7 @@
 		</button>
 	</div>
 	<br>
+	{% endif %}
 	{% if containers %}
 	<table id="teamsboard" class="table table-striped table-dark mt-4">
 		<thead class="thead-dark">
@@ -117,6 +135,12 @@
 				</td>
 				<td class="text-center pr-2"><strong>Settings</strong>
 				</td>
+				{% if admin %}
+				<td class="text-center pr-2"><strong>Deleted</strong>
+				</td>
+				<td class="text-center pr-2"><strong>Dockerfile</strong>
+				</td>
+				{% endif%}
 			</tr>
 		</thead>
 		<tbody>
@@ -135,12 +159,45 @@
 						<i class="fa fa-times"></i>
 					</span>
 				</td>
+				{% if admin %}
+				<td class="p-3 text-center">{{ c.deleted }}</td>
+				<td class="p-3 text-center"><a href="{{c.id}}"><button class="btn btn-light">See
+							file</button></a></td>
+				{% endif%}
 			</tr>
 			{% endfor %}
 		</tbody>
 	</table>
 	{% endif %}
 </div>
+{% if pages > 1 %}
+<div class="row m-3 justify-content-center">
+	<a href="?page={{ page-1 }}">
+		<button class="btn btn-theme btn-outlined m-1" {% if page == 1 %} disabled {% endif %}>
+			<i class="fa fa-arrow-left"></i> Previous page
+		</button>
+	</a>
+	<nav>
+		<ul class="pagination">
+			{% for i in range(pages) %}
+			<a href="?page={{ i+1 }}">
+				<li class="p-1 page-item {% if page==i+1 %} active {% endif %}">
+					<span class="page-link">
+						{{i+1}}
+						<span class="sr-only">(current)</span>
+					</span>
+				</li>
+			</a>
+			{% endfor %}
+		</ul>
+	</nav>
+	<a href="?page={{ page+1 }}">
+		<button class="btn btn-theme btn-outlined m-1" {% if page == pages %} disabled {% endif %}>
+			Next page <i class="fa fa-arrow-right"></i>
+		</button>
+	</a>
+</div>
+{% endif %}
 {% endblock %}
 
 {% block scripts %}
