--- a/templates/containers.html
+++ b/templates/containers.html
@@ -85,7 +85,7 @@
 			<div class="modal-header">
 				<h2 class="text-center"><span id="confirm-container-title"></span> Container</h2>
 			</div>
-			<div class="modal-body" style="height:110px">
+			<div class="modal-body">
 				<div class="row-fluid">
 					<div class="col-md-12">
 						<form method="POST">
@@ -121,8 +121,20 @@
 			Import Image
 		</button>
 	</div>
-	<br>
+	{% else %}
+	<div style="text-align:center">
+		<h1>Overview</h1>
+		<a href="?running={{not running}}&page={{page}}">
+			<button class="btn btn-theme btn-outlined create-challenge">
+				Display {% if running %}all{% else %}only running{% endif %}
+			</button>
+		</a>
+		<button class="btn btn-theme btn-outlined create-challenge" id="delete-all">
+			Permanently delete all deleted containers
+		</button>
+	</div>
 	{% endif %}
+	<br>
 	{% if containers %}
 	<table id="teamsboard" class="table table-striped table-dark mt-4">
 		<thead class="thead-dark">
@@ -172,7 +184,7 @@
 </div>
 {% if pages > 1 %}
 <div class="row m-3 justify-content-center">
-	<a href="?page={{ page-1 }}">
+	<a href="?page={{ page-1 }}&running={{running}}">
 		<button class="btn btn-theme btn-outlined m-1" {% if page == 1 %} disabled {% endif %}>
 			<i class="fa fa-arrow-left"></i> Previous page
 		</button>
@@ -180,7 +192,7 @@
 	<nav>
 		<ul class="pagination">
 			{% for i in range(pages) %}
-			<a href="?page={{ i+1 }}">
+			<a href="?page={{ i+1 }}&running={{running}}">
 				<li class="p-1 page-item {% if page==i+1 %} active {% endif %}">
 					<span class="page-link">
 						{{i+1}}
@@ -191,7 +203,7 @@
 			{% endfor %}
 		</ul>
 	</nav>
-	<a href="?page={{ page+1 }}">
+	<a href="?page={{ page+1 }}&running={{running}}">
 		<button class="btn btn-theme btn-outlined m-1" {% if page == pages %} disabled {% endif %}>
 			Next page <i class="fa fa-arrow-right"></i>
 		</button>
@@ -248,6 +260,10 @@
 		var container = elem.attr('id');
 		var container_name = elem.text().trim();
 		load_confirm_modal('Stop', '/containers/' + container + '/stop', container_name)
+	});
+
+	$('#delete-all').click(function () {
+		load_confirm_modal('Permanently delete', '/admin/conatainers/delete_all_deleted', 'Permanently remove all deleted containers from the database')
 	});
 
 	$(document).ready(function () {
