Fixed duplicate name bug for containers

--- a/templates/containers.html
+++ b/templates/containers.html
@@ -237,6 +237,10 @@
 			if (data == "1") {
 				location.reload()
 			}
+			else {
+				alert('Request failed')
+				location.reload()
+			}
 		})
 	});
 
